# apedi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
apedi/: __init__.py  __main__.py  about.py  app.py  buffer.py  cli.py  desktop_integration.py  file_io.py  find_in_files.py  formatters.py  i18n.py  ignore_filter.py  languages.py  markdown_preview.py  preferences.py  quick_open.py  recent.py  recovery.py  settings.py  shortcuts.py  shortcuts_window.py  sidebar.py  style.py  symbols.py  terminal.py  whatsnew.py  window.py
data/: pl.aprus.apedi.desktop  pl.aprus.apedi.metainfo.xml
data/po/: pl.po
data/snippets/: apedi.snippets
snap/: snapcraft.yaml
tests/: test_file_io.py  test_formatters.py  test_languages.py  test_markdown_preview.py  test_recent.py  test_resolve.py  test_settings.py
